# cmake-example

./: .gitignore  README.md  build.sh
hybrid/: build.sh
hybrid/app/: CMakeLists.txt
hybrid/app/myexe/: CMakeLists.txt
hybrid/infra/: CMakeLists.txt
hybrid/infra/mylib1/: CMakeLists.txt  mylib1.c
hybrid/infra/mylib2/: CMakeLists.txt  mylib2.c
hybrid/infra/utest/: CMakeLists.txt
infra/: CMakeLists.txt
infra/mylib1/: CMakeLists.txt
infra/mylib2/: CMakeLists.txt
myexe/: CMakeLists.txt  main.c
single-tree/: CMakeLists.txt
single-tree/infra/: CMakeLists.txt
single-tree/infra/mylib1/: CMakeLists.txt  mylib1.c  mylib1_priv.h
single-tree/infra/mylib2/: CMakeLists.txt
single-tree/infra/utest/: CMakeLists.txt  main.c
single-tree/myexe/: CMakeLists.txt
templated/: CMakeLists.txt  build.sh  cmake.sh
templated/app/: CMakeLists.txt
templated/app/myexe/: CMakeLists.txt
templated/cmake/: messages.cmake  packages.cmake  targets.cmake
templated/infra/: CMakeLists.txt
templated/infra/mylib1/: CMakeLists.txt  lib1_priv.h  mylib1.cpp
templated/infra/mylib2/: CMakeLists.txt
templated/infra/utest/: CMakeLists.txt
